[package]
name = "ultralight"
version = "0.1.5"
edition = "2021"
description = "Rust bindings for Ultralight: Next-Generation HTML Renderer"
homepage = "https://ultralig.ht/"
license-file = "LICENSE"
categories = [ "gui", "web-programming", "visualization", "rendering", "graphics" ]

[dependencies]
image = { version = "0.24.0", default-features = false }
mime_guess = "2.0.4"
notify = { version = "6.1.1", optional = true }

[dev-dependencies]
image = { version = "0.24.0", default-features = false, features = [ "png" ] }

[build-dependencies]
bindgen = { version = "0.68.1", optional = true }
fs_extra = "1.3.0"

[features]
default = [  ]
filewatching = [ "dep:notify" ]
generate_bindings = [ "dep:bindgen" ]
