[package]
name = "ultralight"
version = "0.1.7"
edition = "2021"
description = "Rust bindings for Ultralight: Next-Generation HTML Renderer"
homepage = "https://ultralig.ht/"
repository = "https://github.com/VZout/ultralight/"
license-file = "LICENSE"
categories = [ "gui", "web-programming", "visualization", "rendering", "graphics" ]
#exclude = ["examples/", "ultralight-api/", ".*"]

[dependencies]
image = { version = "0.25.1", default-features = false, optional = true }
mime_guess = "2.0.4"
notify = { version = "6.1.1", optional = true }

[dev-dependencies]
image = { version = "0.25.1", default-features = false, features = [ "png" ] }
wgpu = { version = "0.19.1", features = [ "spirv"] }
env_logger = "0.10"
pollster = "0.3"
nohash = "0.2.0"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
hassle-rs = "0.11.0"
winit = { version = "0.29" }

[build-dependencies]
bindgen = { version = "0.68.1", optional = true }
fs_extra = { version = "1.3.0", optional = true }
ureq = { version = "2.9.1", optional = true, default-features = false, features=["tls"] }

[features]
filewatching = [ "dep:notify" ]
generate_bindings = [ "dep:bindgen" ]
image = [ "dep:image" ]
requires_dll = [ "dep:fs_extra", "dep:ureq" ]
